@@ -27,6 +27,8 @@ apport (0.70) UNRELEASED; urgency=low
   * apport/report.py, add_proc_info(): Do not regard symlinks to executables
     as interpreted scripts any more (such as Debian alternatives). Add test
     case. (LP: #94732)
+  * problem_report.py: Add new method get_new() which returns a set of all
+    keys which have been added since load() or construction. Add test cases.
 
   [ Kees Cook ]
   * apport/report.py, add_proc_info(): If reading /proc/pid/maps fails,
@@ -53,7 +55,7 @@ apport (0.70) UNRELEASED; urgency=low
   * apport/ui.py, open_url(): Check that $DISPLAY is set before considering
     the KDE/Gnome web browsers.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 19:50:34 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 20:36:00 +0100
 
 apport (0.69) feisty; urgency=low
 
